Fix #119250: Python: World matrix for newly created objects is not identity

Initialize these like other fields in the object runtime struct.