source/blender/blenkernel/BKE_object_types.hh
@@ -26,8 +26,9 @@ struct GeometrySet;
 
 struct ObjectRuntime {
   /** Final transformation matrices with constraints & animsys applied. */
-  float4x4 object_to_world;
-  float4x4 world_to_object;
+  float4x4 object_to_world = float4x4::identity();
+  float4x4 world_to_object = float4x4::identity();
+
   /**
    * The custom data layer mask that was last used
    * to calculate data_eval and mesh_deform_eval.
